Optimize error handling
The error do now contains a more detailed error.
It has been sent to the client already but wasn't
handled correctly.